# gala-team

./: .bazelignore  .bazelrc  .gitattributes  .gitignore  BUILD.bazel  CLAUDE.md  MODULE.bazel  README.md  gala.mod  gala.sum  go.mod  go.sum
.claude/: settings.local.json
.claude/skills/: gala-team-design.md  gala-team-e2e.md
.claude/skills/gala-team-design/: SKILL.md
.claude/skills/gala-team-e2e/: SKILL.md
.github/workflows/: ci.yml  release.yml
app/: BUILD.bazel  dispatch_parser.gala  dispatch_parser_test.gala  program_helper.go  project_resolver.gala  project_resolver_test.gala  runtime_glue.gala  runtime_glue_test.gala  state_machine.gala  state_machine_test.gala  string_helpers.go  team_config.gala  team_config_test.gala  types.gala  types_test.gala
app/agent/: BUILD.bazel  agent.gala
app/buildinfo/: BUILD.bazel  buildinfo.go
app/cli/: BUILD.bazel  keymap.gala  keymap_test.gala  picker.gala  picker_test.gala
app/config/: BUILD.bazel  team_config.gala  team_config_test.gala
app/consult/: BUILD.bazel  dispatch_test.gala  registry.gala  registry_test.gala  runner.gala  runner_test.gala  streaming.gala
app/directive/: BUILD.bazel  BUILD.bazel.tmp.63440.f930276f2d51  adapter.gala  adapter_test.gala  control.gala  control_test.gala  directive.gala  parser.gala  parser_test.gala
app/fsm/: BUILD.bazel  state_machine.gala  state_machine_test.gala
app/guidance/: BUILD.bazel  guidance.gala
app/headless/: BUILD.bazel  headless.gala
app/onboarding/: BUILD.bazel  onboarding.gala  onboarding_test.gala
app/policy/: BUILD.bazel  policy.gala  policy_test.gala  runner.gala
app/project/: BUILD.bazel  project.gala  resolver.gala  resolver_test.gala
app/protocol/: BUILD.bazel  decode.gala  decode_spec_test.gala  decode_test.gala  delivery.gala  delivery_test.gala  dispatch_ctx.gala  message.gala  message_test.gala
app/runtime/: BUILD.bazel  browser.go  claude_stream_json.gala  claude_stream_json_test.gala  claude_transport.gala  claude_transport_test.gala  crash_capture_test.gala  debuglog.gala  debuglog.go  runtime_glue.gala  runtime_glue_test.gala  session_id.gala  subprocess_util.gala  subprocess_util_test.gala  trace.gala  trace.go
app/session/: BUILD.bazel  history.gala  session.gala  session_test.gala
app/team/: BUILD.bazel  team.gala  team_test.gala
app/testdriver/: BUILD.bazel  testdriver.gala  testdriver_roundtrip_test.gala
app/ui/: BUILD.bazel  e2e_test.gala  model.gala  pump_characterization_test.gala  update.gala  update_test.gala  view.gala  view_test.gala
app/util/: BUILD.bazel  collections.gala  collections_test.gala
app/version/: BUILD.bazel  version.gala
app/view/: BUILD.bazel  pipeline_view.gala  pipeline_view_test.gala  team_panel.gala  team_panel_test.gala
cmd/: BUILD.bazel  main.gala
cmd/gala_team/: BUILD.bazel
cmd/gala_team_headless/: BUILD.bazel  main.gala
docs/: architecture.md
docs/audit/: README.md  operator-ux-systematic-improvements.md  state-lifecycle-systematic-improvements.md
docs/transpiler-issues/: some-wrap-sealed-case-mis-lowered.md
docs/transpiler-issues/some-wrap-sealed-case-mis-lowered/: repro.gala  types.gala  wrap.gala
examples/: minimal.yaml  multi-team.yaml  skunkworks.yaml
scripts/: analyze_frames.js  check_validate.js  crash_hunt.sh  error_audit.sh  leak_hunt.js  live_audit.sh  live_audit2.sh  live_check.js  real_claude_2eng_qa_e2e.sh  real_claude_audit.sh  real_claude_consult_e2e.sh  thorough_audit.sh  thorough_check.js  ui_audit.sh  ui_validate.sh
testdata/teams/: invalid_dup_name.yaml  invalid_no_lead.yaml  valid_no_qa.yaml  valid_team.yaml
tools/: workspace_status.bat  workspace_status.sh
