load("@gazelle//:def.bzl", "gazelle", "gazelle_binary")
load("@rules_gala//gala:defs.bzl", "gala_imports_helper")

exports_files(
    ["go.mod"],
    visibility = ["//visibility:public"],
)

# gala_gazelle is a composite language: it manages GALA, mixed GALA/Go, and
# pure-Go packages, so no separate @gazelle//language/go.
gazelle_binary(
    name = "gazelle_bin",
    languages = ["@gala_gazelle//gala"],
)

# Drive the import helper from the registered GALA toolchain (not PATH), so the
# helper that extracts imports is the same gala the toolchain transpiles with —
# BUILD generation stays reproducible and never drifts from the gala version.
gala_imports_helper(name = "gala_imports")

# gazelle:prefix github.com/martianoff/gala_team
# gazelle:gala_prefix github.com/martianoff/gala_team
# gala_tui and gala-acp ship their gala_library in other Bazel modules; map
# their import paths to those labels so they land in gala_deps correctly (a
# cross-module GALA library needs its sources on the transpiler search path).
# gazelle:resolve gala github.com/martianoff/gala-tui @gala_tui//:gala_tui
# gazelle:resolve gala github.com/martianoff/gala-acp @gala_acp//:gala_acp
gazelle(
    name = "gazelle",
    data = [":gala_imports"],
    extra_args = ["-gala_helper=$(execpath :gala_imports)"],
    gazelle = ":gazelle_bin",
)
