module(
    name = "gala_team",
    version = "0.0.1",
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "gala", version = "1.0.0")
bazel_dep(name = "gala_tui", version = "0.3.0")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "rules_go", version = "0.59.0")

# Dev: local sibling overrides for both gala stdlib and gala_tui.
# Both repos gitignore their generated MODULE.bazel + BUILD.bazel
# files; CI re-creates them via the `Stage gala_tui Bazel files`
# workflow step before invoking bazel.
local_path_override(
    module_name = "gala",
    path = "../gala_simple/.claude/worktrees/release-0.43.0",
)

local_path_override(
    module_name = "gala_tui",
    path = "../gala_tui",
)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.5")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_google_uuid")
