load("@gala//:gala.bzl", "gala_go_test", "gala_library")

gala_library(
    name = "app",
    srcs = [
        "team_config.gala",
        "types.gala",
    ],
    go_srcs = ["program_helper.go"],
    importpath = "github.com/martianoff/gala_team/app",
    deps = [
        "@gala//collection_immutable",
        "@gala//yaml",
        "@gala_tui//:gala_tui",
    ],
    visibility = ["//visibility:public"],
)

gala_go_test(
    name = "types_test",
    srcs = ["types_test.gala"],
    deps = [
        ":app",
        "@gala//collection_immutable",
    ],
)

gala_go_test(
    name = "team_config_test",
    srcs = ["team_config_test.gala"],
    deps = [
        ":app",
    ],
)
