load("@gala//:gala.bzl", "gala_go_test", "gala_library")

gala_library(
    name = "app",
    srcs = [
        "dispatch_parser.gala",
        "project_resolver.gala",
        "runtime_glue.gala",
        "state_machine.gala",
        "team_config.gala",
        "types.gala",
    ],
    go_srcs = [
        "program_helper.go",
        "string_helpers.go",
    ],
    importpath = "github.com/martianoff/gala_team/app",
    deps = [
        "@gala//collection_immutable",
        "@gala//go_interop",
        "@gala//subprocess",
        "@gala//yaml",
        "@gala_tui//:gala_tui",
    ],
    visibility = ["//visibility:public"],
)

gala_go_test(
    name = "types_test",
    srcs = ["types_test.gala"],
    deps = [
        ":app",
        "@gala//collection_immutable",
    ],
)

gala_go_test(
    name = "team_config_test",
    srcs = ["team_config_test.gala"],
    deps = [
        ":app",
    ],
)

gala_go_test(
    name = "project_resolver_test",
    srcs = ["project_resolver_test.gala"],
    deps = [
        ":app",
    ],
)

gala_go_test(
    name = "dispatch_parser_test",
    srcs = ["dispatch_parser_test.gala"],
    deps = [
        ":app",
    ],
)

gala_go_test(
    name = "state_machine_test",
    srcs = ["state_machine_test.gala"],
    deps = [
        ":app",
        "@gala//collection_immutable",
    ],
)

gala_go_test(
    name = "runtime_glue_test",
    srcs = ["runtime_glue_test.gala"],
    deps = [
        ":app",
    ],
)
