load("@rules_gala//gala:defs.bzl", "gala_binary")

# main.gala lives directly in cmd/ (not cmd/gala_team/) so the `gala build ./cmd`
# CLI smoke-build works — the gala CLI cannot build a main nested under
# cmd/<name>/ (its build-workspace import rewrite misses the sibling app/*
# packages). gazelle therefore can't own this target (it would mint a
# directory-named "cmd" binary), so the file is excluded and the rule is hand-
# maintained and kept.
# gazelle:exclude main.gala

# keep
# x_defs is consumed by rules_go's link step: each key is a fully-
# qualified `<importpath>.<Var>` and each value is either a literal or
# a `{KEY}` reference into the workspace status output. The STABLE_*
# keys come from tools/workspace_status.sh (wired via .bazelrc).
gala_binary(
    name = "gala_team",
    srcs = ["main.gala"],
    gala_deps = ["@gala_tui//:gala_tui"],
    visibility = ["//visibility:public"],
    x_defs = {
        "github.com/martianoff/gala_team/app/buildinfo.Version": "{STABLE_GALA_TEAM_VERSION}",
        "github.com/martianoff/gala_team/app/buildinfo.Commit": "{STABLE_GIT_COMMIT}",
        "github.com/martianoff/gala_team/app/buildinfo.GitDescribe": "{STABLE_GIT_TAG}",
    },
    deps = [
        "//app/cli",
        "//app/config",
        "//app/consult",
        "//app/guidance",
        "//app/policy",
        "//app/project",
        "//app/runtime",
        "//app/session",
        "//app/team",
        "//app/testdriver",
        "//app/ui",
        "//app/version",
        "@gala//collection_immutable",
        "@gala//fs",
        "@gala//strings",
        "@gala//time_utils",
    ],
)
