load("@gala//:gala.bzl", "gala_go_test", "gala_library")

gala_library(
    name = "cli",
    srcs = [
        "keymap.gala",
        "picker.gala",
    ],
    gala_deps = [
        "@gala_tui//:gala_tui",
    ],
    importpath = "github.com/martianoff/gala_team/app/cli",
    visibility = ["//visibility:public"],
    deps = [
        "//app/config",
        "//app/team",
        "//app/ui",
        "@gala//collection_immutable",
    ],
)

gala_go_test(
    name = "keymap_test",
    srcs = ["keymap_test.gala"],
    gala_deps = [
        "@gala_tui//:gala_tui",
    ],
    lib_srcs = [
        "keymap.gala",
        "picker.gala",
    ],
    pkg = "cli",
    deps = [
        "//app/config",
        "//app/session",
        "//app/team",
        "//app/ui",
        "@gala//collection_immutable",
    ],
)

gala_go_test(
    name = "picker_test",
    srcs = ["picker_test.gala"],
    gala_deps = [
        "@gala_tui//:gala_tui",
    ],
    lib_srcs = [
        "keymap.gala",
        "picker.gala",
    ],
    pkg = "cli",
    deps = [
        "//app/config",
        "//app/policy",
        "//app/team",
        "//app/ui",
        "@gala//collection_immutable",
    ],
)
