load("@rules_gala//gala:defs.bzl", "gala_library", "gala_test")

gala_library(
    name = "cli",
    srcs = [
        "keymap.gala",
        "picker.gala",
    ],
    gala_deps = ["@gala_tui//:gala_tui"],
    importpath = "github.com/martianoff/gala_team/app/cli",
    visibility = ["//visibility:public"],
    deps = [
        "//app/config",
        "//app/team",
        "//app/ui",
        "@gala//collection_immutable",
    ],
)

gala_test(
    name = "cli_test",
    srcs = [
        "keymap_test.gala",
        "picker_test.gala",
    ],
    gala_deps = ["@gala_tui//:gala_tui"],
    importpath = "github.com/martianoff/gala_team/app/cli",
    lib_srcs = [
        "keymap.gala",
        "picker.gala",
    ],
    pkg = "cli",
    deps = [
        "//app/config",
        "//app/policy",
        "//app/session",  # keep: transpiler surfaces session types via the app/ui dot-import
        "//app/team",
        "//app/ui",
        "@gala//collection_immutable",
    ],
)
