load("@gala//:gala.bzl", "gala_go_test", "gala_library")

gala_library(
    name = "config",
    srcs = ["team_config.gala"],
    importpath = "github.com/martianoff/gala_team/app/config",
    visibility = ["//visibility:public"],
    deps = [
        "//app/policy",
        "//app/team",
        "@gala//collection_immutable",
        "@gala//strings",
        "@gala//yaml",
    ],
)

gala_go_test(
    name = "team_config_test",
    srcs = ["team_config_test.gala"],
    lib_srcs = ["team_config.gala"],
    pkg = "config",
    deps = [
        "//app/policy",
        "//app/team",
        "@gala//collection_immutable",
        "@gala//strings",
        "@gala//yaml",
    ],
)
