load("@gala//:gala.bzl", "gala_go_test", "gala_library")

gala_library(
    name = "consult",
    srcs = [
        "registry.gala",
        "runner.gala",
        "streaming.gala",
    ],
    importpath = "github.com/martianoff/gala_team/app/consult",
    visibility = ["//visibility:public"],
    deps = [
        "//app/config",
        "//app/headless",
        "//app/onboarding",
        "//app/policy",
        "//app/project",
        "//app/runtime",
        "//app/team",
        "@gala//collection_immutable",
        "@gala//concurrent",
        "@gala//fs",
        "@gala//go_interop",
        "@gala//yaml",
    ],
)

gala_go_test(
    name = "registry_test",
    srcs = ["registry_test.gala"],
    lib_srcs = [
        "registry.gala",
        "runner.gala",
        "streaming.gala",
    ],
    pkg = "consult",
    deps = [
        "//app/config",
        "//app/headless",
        "//app/onboarding",
        "//app/policy",
        "//app/project",
        "//app/runtime",
        "//app/team",
        "@gala//collection_immutable",
        "@gala//concurrent",
        "@gala//fs",
        "@gala//go_interop",
        "@gala//yaml",
    ],
)

gala_go_test(
    name = "runner_test",
    srcs = ["runner_test.gala"],
    lib_srcs = [
        "registry.gala",
        "runner.gala",
        "streaming.gala",
    ],
    pkg = "consult",
    deps = [
        "//app/config",
        "//app/headless",
        "//app/onboarding",
        "//app/policy",
        "//app/project",
        "//app/runtime",
        "//app/team",
        "@gala//collection_immutable",
        "@gala//concurrent",
        "@gala//fs",
        "@gala//go_interop",
        "@gala//yaml",
    ],
)

gala_go_test(
    name = "dispatch_test",
    srcs = ["dispatch_test.gala"],
    lib_srcs = [
        "registry.gala",
        "runner.gala",
        "streaming.gala",
    ],
    pkg = "consult",
    deps = [
        "//app/config",
        "//app/headless",
        "//app/onboarding",
        "//app/policy",
        "//app/project",
        "//app/runtime",
        "//app/team",
        "@gala//collection_immutable",
        "@gala//concurrent",
        "@gala//fs",
        "@gala//go_interop",
        "@gala//yaml",
    ],
)
