load("@rules_gala//gala:defs.bzl", "gala_library", "gala_test")

gala_library(
    name = "consult",
    srcs = [
        "registry.gala",
        "runner.gala",
        "streaming.gala",
    ],
    importpath = "github.com/martianoff/gala_team/app/consult",
    visibility = ["//visibility:public"],
    deps = [
        "//app/config",
        "//app/headless",
        "//app/onboarding",
        "//app/policy",
        "//app/project",
        "//app/runtime",
        "//app/team",
        "@gala//collection_immutable",
        "@gala//concurrent",
        "@gala//fs",
        "@gala//go_interop",
        "@gala//yaml",
    ],
)

gala_test(
    name = "consult_test",
    srcs = [
        "dispatch_test.gala",
        "registry_test.gala",
        "runner_test.gala",
    ],
    importpath = "github.com/martianoff/gala_team/app/consult",
    lib_srcs = [
        "registry.gala",
        "runner.gala",
        "streaming.gala",
    ],
    pkg = "consult",
    deps = [
        "//app/config",
        "//app/headless",
        "//app/onboarding",
        "//app/policy",
        "//app/project",
        "//app/runtime",
        "//app/team",
        "@gala//collection_immutable",
        "@gala//concurrent",
        "@gala//fs",
        "@gala//go_interop",
        "@gala//yaml",
    ],
)
