load("@rules_gala//gala:defs.bzl", "gala_library", "gala_test")

gala_library(
    name = "directive",
    srcs = [
        "adapter.gala",
        "directive.gala",
    ],
    importpath = "github.com/martianoff/gala_team/app/directive",
    deps = [
        "//app/protocol",
        "@gala//collection_immutable",
        "@gala//go_interop",
        "@gala//strings",
    ],
    visibility = ["//visibility:public"],
)

gala_test(
    name = "adapter_test",
    srcs = ["adapter_test.gala"],
    pkg = "directive",
    lib_srcs = [
        "adapter.gala",
        "directive.gala",
    ],
    deps = [
        "//app/protocol",
        "@gala//collection_immutable",
        "@gala//go_interop",
        "@gala//strings",
    ],
)
