load("@rules_gala//gala:defs.bzl", "gala_library", "gala_test")

gala_library(
    name = "directive",
    srcs = [
        "adapter.gala",
        "directive.gala",
    ],
    importpath = "github.com/martianoff/gala_team/app/directive",
    visibility = ["//visibility:public"],
    deps = [
        "//app/protocol",
        "@gala//collection_immutable",
        "@gala//go_interop",
        "@gala//strings",
    ],
)

gala_test(
    name = "directive_test",
    srcs = ["adapter_test.gala"],
    importpath = "github.com/martianoff/gala_team/app/directive",
    lib_srcs = [
        "adapter.gala",
        "directive.gala",
    ],
    pkg = "directive",
    deps = [
        "//app/protocol",
        "@gala//collection_immutable",
        "@gala//go_interop",
        "@gala//strings",
    ],
)
