load("@rules_gala//gala:defs.bzl", "gala_library", "gala_test")

gala_library(
    name = "fsm",
    srcs = ["state_machine.gala"],
    importpath = "github.com/martianoff/gala_team/app/fsm",
    deps = [
        "//app/directive",
        "//app/util",
        "@gala//collection_immutable",
    ],
    visibility = ["//visibility:public"],
)

gala_test(
    name = "state_machine_test",
    srcs = ["state_machine_test.gala"],
    pkg = "fsm",
    lib_srcs = ["state_machine.gala"],
    deps = [
        "//app/directive",
        "//app/util",
        "@gala//collection_immutable",
    ],
)
