load("@rules_gala//gala:defs.bzl", "gala_library", "gala_test")

gala_library(
    name = "fsm",
    srcs = ["state_machine.gala"],
    importpath = "github.com/martianoff/gala_team/app/fsm",
    visibility = ["//visibility:public"],
    deps = [
        "//app/directive",
        "//app/util",
        "@gala//collection_immutable",
    ],
)

gala_test(
    name = "fsm_test",
    srcs = ["state_machine_test.gala"],
    importpath = "github.com/martianoff/gala_team/app/fsm",
    lib_srcs = ["state_machine.gala"],
    pkg = "fsm",
    deps = [
        "//app/directive",
        "//app/util",
        "@gala//collection_immutable",
    ],
)
