load("@gala//:gala.bzl", "gala_library")

gala_library(
    name = "guidance",
    srcs = ["guidance.gala"],
    importpath = "github.com/martianoff/gala_team/app/guidance",
    visibility = ["//visibility:public"],
    deps = [
        "@gala//collection_immutable",
        "@gala//fs",
        "@gala//strings",
    ],
)
