load("@gala//:gala.bzl", "gala_library")

gala_library(
    name = "headless",
    srcs = ["headless.gala"],
    importpath = "github.com/martianoff/gala_team/app/headless",
    visibility = ["//visibility:public"],
    deps = [
        "//app/directive",
        "//app/onboarding",
        "//app/policy",
        "//app/project",
        "//app/runtime",
        "//app/session",
        "//app/team",
        "@gala//collection_immutable",
        "@gala//go_interop",
        "@gala//json",
        "@gala//strings",
    ],
)
