load("@rules_gala//gala:defs.bzl", "gala_library")

gala_library(
    name = "headless",
    srcs = ["headless.gala"],
    importpath = "github.com/martianoff/gala_team/app/headless",
    deps = [
        "//app/onboarding",
        "//app/policy",
        "//app/project",
        "//app/protocol",
        "//app/runtime",
        "//app/session",
        "//app/team",
        "@gala//collection_immutable",
        "@gala//go_interop",
        "@gala//json",
        "@gala//strings",
    ],
    visibility = ["//visibility:public"],
)
