load("@gala//:gala.bzl", "gala_go_test", "gala_library")

gala_library(
    name = "onboarding",
    srcs = ["onboarding.gala"],
    importpath = "github.com/martianoff/gala_team/app/onboarding",
    deps = [
        "//app/policy",
        "//app/project",
        "//app/team",
        "@gala//collection_immutable",
        "@gala//fs",
        "@gala//strings",
    ],
    visibility = ["//visibility:public"],
)

gala_go_test(
    name = "onboarding_test",
    srcs = ["onboarding_test.gala"],
    pkg = "onboarding",
    lib_srcs = ["onboarding.gala"],
    deps = [
        ":onboarding",
        "//app/policy",
        "//app/project",
        "//app/team",
        "@gala//collection_immutable",
        "@gala//fs",
        "@gala//go_interop",
        "@gala//strings",
    ],
)
