load("@rules_gala//gala:defs.bzl", "gala_library", "gala_test")

gala_library(
    name = "onboarding",
    srcs = ["onboarding.gala"],
    importpath = "github.com/martianoff/gala_team/app/onboarding",
    visibility = ["//visibility:public"],
    deps = [
        "//app/policy",
        "//app/project",
        "//app/team",
        "@gala//collection_immutable",
        "@gala//fs",
        "@gala//strings",
    ],
)

gala_test(
    name = "onboarding_test",
    srcs = ["onboarding_test.gala"],
    importpath = "github.com/martianoff/gala_team/app/onboarding",
    lib_srcs = ["onboarding.gala"],
    pkg = "onboarding",
    deps = [
        "//app/policy",
        "//app/project",
        "//app/team",
        "@gala//collection_immutable",
        "@gala//fs",
        "@gala//go_interop",
        "@gala//strings",
    ],
)
