load("@gala//:gala.bzl", "gala_go_test", "gala_library")

gala_library(
    name = "policy",
    srcs = [
        "policy.gala",
        "runner.gala",
    ],
    importpath = "github.com/martianoff/gala_team/app/policy",
    visibility = ["//visibility:public"],
    deps = [
        "@gala//collection_immutable",
        "@gala//concurrent",
        "@gala//go_interop",
        "@gala//subprocess",
        "@gala//time_utils",
    ],
)

gala_go_test(
    name = "policy_test",
    srcs = ["policy_test.gala"],
    lib_srcs = [
        "policy.gala",
        "runner.gala",
    ],
    pkg = "policy",
    deps = [
        ":policy",
        "@gala//collection_immutable",
        "@gala//concurrent",
        "@gala//go_interop",
        "@gala//subprocess",
        "@gala//time_utils",
    ],
)
