load("@rules_gala//gala:defs.bzl", "gala_library", "gala_test")

gala_library(
    name = "policy",
    srcs = [
        "policy.gala",
        "runner.gala",
    ],
    importpath = "github.com/martianoff/gala_team/app/policy",
    visibility = ["//visibility:public"],
    deps = [
        "@gala//collection_immutable",
        "@gala//concurrent",
        "@gala//go_interop",
        "@gala//subprocess",
        "@gala//time_utils",
    ],
)

gala_test(
    name = "policy_test",
    srcs = ["policy_test.gala"],
    importpath = "github.com/martianoff/gala_team/app/policy",
    lib_srcs = [
        "policy.gala",
        "runner.gala",
    ],
    pkg = "policy",
    deps = [
        "@gala//collection_immutable",
        "@gala//concurrent",
        "@gala//go_interop",
        "@gala//subprocess",
        "@gala//time_utils",
    ],
)
