load("@gala//:gala.bzl", "gala_go_test", "gala_library")

gala_library(
    name = "project",
    srcs = [
        "project.gala",
        "resolver.gala",
    ],
    importpath = "github.com/martianoff/gala_team/app/project",
    visibility = ["//visibility:public"],
    deps = [
        "@gala//collection_immutable",
        "@gala//fs",
        "@gala//go_interop",
        "@gala//strings",
        "@gala//subprocess",
    ],
)

gala_go_test(
    name = "resolver_test",
    srcs = ["resolver_test.gala"],
    lib_srcs = [
        "project.gala",
        "resolver.gala",
    ],
    pkg = "project",
    deps = [
        "@gala//collection_immutable",
        "@gala//fs",
        "@gala//go_interop",
        "@gala//strings",
        "@gala//subprocess",
    ],
)
