load("@rules_gala//gala:defs.bzl", "gala_library", "gala_test")

gala_library(
    name = "project",
    srcs = [
        "project.gala",
        "resolver.gala",
    ],
    importpath = "github.com/martianoff/gala_team/app/project",
    visibility = ["//visibility:public"],
    deps = [
        "@gala//collection_immutable",
        "@gala//fs",
        "@gala//go_interop",
        "@gala//strings",
        "@gala//subprocess",
    ],
)

gala_test(
    name = "project_test",
    srcs = ["resolver_test.gala"],
    importpath = "github.com/martianoff/gala_team/app/project",
    lib_srcs = [
        "project.gala",
        "resolver.gala",
    ],
    pkg = "project",
    deps = [
        "@gala//collection_immutable",
        "@gala//fs",
        "@gala//go_interop",
        "@gala//strings",
        "@gala//subprocess",
    ],
)
