load("@rules_gala//gala:defs.bzl", "gala_library", "gala_test")

gala_library(
    name = "protocol",
    srcs = [
        "decode.gala",
        "delivery.gala",
        "message.gala",
    ],
    importpath = "github.com/martianoff/gala_team/app/protocol",
    visibility = ["//visibility:public"],
    deps = [
        "@gala//collection_immutable",
        "@gala//strings",
        "@gala//time_utils",
    ],
)

gala_test(
    name = "protocol_test",
    srcs = [
        "decode_spec_test.gala",
        "decode_test.gala",
        "delivery_test.gala",
        "message_test.gala",
    ],
    importpath = "github.com/martianoff/gala_team/app/protocol",
    lib_srcs = [
        "decode.gala",
        "delivery.gala",
        "message.gala",
    ],
    pkg = "protocol",
    deps = [
        "@gala//collection_immutable",
        "@gala//go_interop",
        "@gala//strings",
        "@gala//time_utils",
    ],
)
