load("@rules_gala//gala:defs.bzl", "gala_library", "gala_test")

gala_library(
    name = "protocol",
    srcs = [
        "decode.gala",
    ],
    gala_deps = ["@gala_acp//:gala_acp"],
    importpath = "github.com/martianoff/gala_team/app/protocol",
    visibility = ["//visibility:public"],
    deps = [
        "@gala//collection_immutable",
        "@gala//strings",
    ],
)

gala_test(
    name = "protocol_test",
    srcs = [
        "decode_spec_test.gala",
        "decode_test.gala",
    ],
    gala_deps = ["@gala_acp//:gala_acp"],
    importpath = "github.com/martianoff/gala_team/app/protocol",
    lib_srcs = [
        "decode.gala",
    ],
    pkg = "protocol",
    deps = [
        "@gala//collection_immutable",
        "@gala//strings",
    ],
)
