load("@gala//:gala.bzl", "gala_go_test", "gala_library")

gala_library(
    name = "runtime",
    srcs = [
        "runtime_glue.gala",
        "session_id.gala",
        "trace.gala",
    ],
    go_srcs = [
        "trace.go",
    ],
    importpath = "github.com/martianoff/gala_team/app/runtime",
    deps = [
        "//app/policy",
        "//app/project",
        "//app/team",
        "@com_github_google_uuid//:uuid",
        "@gala//collection_immutable",
        "@gala//concurrent",
        "@gala//go_interop",
        "@gala//json",
        "@gala//subprocess",
    ],
    visibility = ["//visibility:public"],
)

gala_go_test(
    name = "runtime_glue_test",
    srcs = ["runtime_glue_test.gala"],
    deps = [
        ":runtime",
        "//app/project",
        "//app/team",
        "@gala//collection_immutable",
    ],
)
