load("@gala//:gala.bzl", "gala_library")

gala_library(
    name = "runtime",
    srcs = [
        "debuglog.gala",
        "runtime_glue.gala",
        "session_id.gala",
        "subprocess_util.gala",
        "trace.gala",
    ],
    go_srcs = [
        "browser.go",
        "debuglog.go",
        "trace.go",
    ],
    importpath = "github.com/martianoff/gala_team/app/runtime",
    deps = [
        "//app/policy",
        "//app/project",
        "//app/team",
        "//app/version",
        "@com_github_google_uuid//:uuid",
        "@gala//collection_immutable",
        "@gala//concurrent",
        "@gala//go_interop",
        "@gala//json",
        "@gala//subprocess",
        "@gala//time_utils",
    ],
    visibility = ["//visibility:public"],
)

# runtime_glue_test.gala runs via `gala test` (CI). It is an internal
# test (`package runtime`) and would need a custom go_test setup here
# because the lib mixes .gala sources with hand-written go_srcs that
# `gala_go_test` cannot embed cleanly. Since CI now uses `gala test`,
# we don't duplicate the harness in Bazel.
